# chirp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.maestro/: run-onboarding-smoke.sh
android/app/: build.gradle.kts
android/docs/wiki/: _index.md  account-creation-autofollow.md  cross-platform-architecture.md  diagnostics-screen.md  nofs-op-centric-feed.md
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  bridge.rs  bridge_accounts.rs  diagnostics_flag.rs  dm_panel.rs  keyring.rs  keyring_tests.rs  relation_counts.rs  render.rs  settings.rs  snapshot_decode.rs  snapshot_decode_feed_tests.rs  snapshot_decode_roundtrip_tests.rs  zap_amount.rs
apps/desktop/src/bridge/: actions.rs  feed.rs
apps/ios/: project.yml
apps/ios/Chirp/: Info.plist
apps/ios/Chirp.xcodeproj/: project.pbxproj
apps/ios/ChirpTests/: EmbedKindProjectionTests.swift  MarmotBuilderGoldenTests.swift  NostrRelayRowTests.swift  OpFeedDecoderTests.swift  ProfileClaimSurfaceTests.swift  SmokeScenariosTests.swift  TypedMarmotClusterDecoderTests.swift
apps/tui/: AGENTS.md  Cargo.toml
apps/tui/examples/: render_kind0_names.rs
apps/tui/src/: bridge.rs  commands.rs  feature_snapshot.rs  feature_snapshot_typed_roundtrip_tests.rs  input.rs  keyring.rs  main.rs  runtime.rs  runtime_commands.rs  snapshot.rs
apps/tui/src/app/: dynamic_feeds.rs  forms.rs
apps/tui/src/input/: group_forms.rs
apps/tui/src/runtime/: feed.rs
apps/tui/src/snapshot/: tests.rs
apps/tui/src/timeline/: tests.rs
apps/tui/src/ui/: chats.rs  groups.rs  layout.rs  layout_tests.rs  note_details_modal.rs  post_list.rs  profile_pane.rs  relay_panel.rs
apps/tui/src/ui/nostr_content/: mod.rs
apps/tui/src/ui/nostr_content/content-kind-registry/: embedded_event.rs  kind_renderer.rs  mod.rs  nostr_kind_registry.rs  nostr_kind_registry_tests.rs  text_helpers.rs
apps/tui/src/ui/nostr_content/content-mention-chip/: nostr_mention_chip.rs
apps/tui/src/ui/nostr_content/content-view/: nostr_content_view.rs
apps/tui/src/ui/nostr_content/content_kind_registry/: nostr_kind_registry.rs
apps/tui/src/ui/nostr_content/content_view/: nostr_content_widget.rs
apps/tui/src/ui/nostr_user/: mod.rs
apps/tui/src/ui/nostr_user/user-avatar/: nostr_avatar.rs
apps/tui/src/ui/relay_settings/: format.rs
apps/tui/tests/: published_outbox.rs
apps/web/: index.html  package.json  tsconfig.e2e.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/scripts/: gen-chirp-config.mjs
apps/web/src/: App.tsx  appNavigation.ts  chirpConfig.generated.ts  main.tsx
apps/web/tests/: bookmark.spec.ts  boot.spec.ts  fixture-relay.ts  (+8 more)
chirp-desktop/src/: app.rs  bridge.rs  bridge_accounts.rs  dm_panel.rs  main.rs  render.rs  snapshot.rs  timeline_panel.rs
chirp-tui/src/: app.rs  commands.rs  feature_snapshot_json.rs  feature_snapshot_typed.rs  lib.rs  media_cache.rs  render_intents.rs  runtime.rs  runtime_commands.rs  timeline.rs
chirp-tui/tests/: e2e.rs
crates/nmp-app-chirp/: Cargo.toml
crates/nmp-app-chirp/schema/: zap_identifier.fbs
crates/nmp-app-chirp/src/: action_specs.rs  action_specs_tests.rs  dispatch_bytes.rs  dispatch_bytes_tests.rs  lib.rs  snapshot_types.rs  typed_api.rs  wallet_runtime.rs  zap_identifier.rs
crates/nmp-app-chirp/src/ffi/: actions.rs  create_account.rs  declared_projections.rs  feed.rs  group.rs  handle.rs  identity.rs  mod.rs  register.rs  relay_seeding.rs  runtime_ffi.rs  snapshot.rs  tag_feed.rs  typed_actions.rs
crates/nmp-app-chirp/src/ffi/feed/: tests.rs
crates/nmp-app-chirp/src/ffi/runtime_ffi/: nip21.rs  refs.rs
crates/nmp-app-chirp/src/ffi/tests/: helpers.rs  home_feed_pull.rs  identity.rs  mod.rs  nip17.rs  nip29.rs  nip29_registration.rs  nip57.rs  producer_completeness.rs  register.rs  social.rs  tag_feed.rs  typed_actions.rs  typed_only_doorway.rs
crates/nmp-app-chirp/src/ffi/tests/producer_completeness/: registry_coverage.rs
crates/nmp-app-chirp/src/native_ffi/: app.rs  identity.rs  marmot.rs  mirror.rs  mod.rs  refs.rs  search.rs  stateless.rs
crates/nmp-app-chirp/tests/: dm_inbox_round_trip.rs  end_to_end.rs  typed_feed_parity.rs
crates/nmp-chirp-android-ffi/: .gitignore  Cargo.toml  build.rs  uniffi-bindgen.rs  uniffi.toml
crates/nmp-chirp-android-ffi/src/: action.rs  capability.rs  claims.rs  external_signer.rs  flat_feed.rs  identity.rs  lib.rs  marmot.rs  platform.rs  push_listener_lock_ordering_tests.rs  relay_seeding.rs  session.rs  signer.rs  signer_request_listener.rs  uniffi_app_loop.rs  update_listener.rs
crates/nmp-chirp-android-ffi/src/session/: callback_state.rs  tests.rs
crates/nmp-chirp-android-ffi/src/uniffi_app_loop/: tests.rs
crates/nmp-chirp-android-ffi/tests/: bridge_parity.rs  openssl_pin.rs
docs/: chirp-feature-parity-checklist.md  chirp-ios-tui-parity.md  chirp-tui.md  chirp-web.md
ios/: README.md  project.yml
ios/Chirp.xcodeproj/: project.pbxproj
ios/ChirpTests/: GroupChatDecodeTests.swift  IdenticonGoldenTests.swift  IdenticonVendorDriftGateTest.swift  IdleReRenderTests.swift  KeyedRefCacheTests.swift  NoteContentRenderingTests.swift  OpFeedRepostDecoderTests.swift  OpFeedTestFixtures.swift  ProfileNameFallbackTests.swift  ProjectionCacheTests.swift  SnapshotProjectionsConformanceTests.swift  TypedAccountsDecoderTests.swift  TypedAppProjectionsDecoderTests.swift  TypedDiagnosticsLifecycleDecoderTests+ReasonCode.swift  TypedDiagnosticsLifecycleDecoderTests.swift  TypedDmClusterDecoderTests.swift  TypedNip46ClusterDecoderTests.swift  TypedProfileClusterDecoderTests.swift  TypedPublishRelayDecoderTests.swift  TypedSnapshotEnvelopeDecoderTests.swift  TypedWalletSettingsHubDecoderTests.swift
ios/ChirpUITests/: ChirpUITests.swift
web/: .gitignore  playwright.config.ts
web/scripts/: build.sh
web/src/: chirpConfig.ts  connection.css  styles.css  tokens.css
web/tests/: feed.spec.ts  fixture-relay-server.ts  groups.spec.ts  messages.spec.ts  notifications-fixture-relay.ts  notifications.spec.ts  reaction.spec.ts  repost.spec.ts  search.spec.ts  thread-reply.spec.ts
(+381 files in other folders)
