[workspace]
members = [
    "crates/nmp-app-chirp",
    "crates/nmp-chirp-config",
    "crates/nmp-chirp-android-ffi",
    "apps/tui",
    "apps/desktop",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/pablof7z/chirp"
version = "0.8.4"

[workspace.dependencies]
flatbuffers = "25.12.19"
zeroize = { version = "1", features = ["derive"] }

# NMP framework - pinned to the upstream clean-break commit.
nmp-codegen        = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-content        = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-core           = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-feed           = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-kinds          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-native-runtime = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip01          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip02          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip05          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip17          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip18          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip22          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip25          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip29          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip47          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip50          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip51          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip57          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip59          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip84          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nip89          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-nostr-id       = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-planner        = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-replies        = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-relations      = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-router         = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-store          = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-substrate      = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-threading      = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
nmp-wot            = { git = "https://github.com/pablof7z/nostr-multi-platform", rev = "19911bba8f6f8b5fab132ab2a8f74cbaec23b3b7" }
